fix spacing for loading for mobile

--- a/style.scss
+++ b/style.scss
@@ -101,7 +101,6 @@ body{
 
 #loading {
 	color: $navy;
-	z-index: 100;
 }
 
 
